# SubmissionWrangler

./: .gitignore  .gitmodules  Cargo.toml  README.md  run_dev.sh  watcher.sh
client/: Cargo.toml  index.html
client/public/: glue.js
client/src/: glue.rs  main.rs
client/src/components/PivoTable/: mod.rs
client/src/views/: mod.rs
client/src/views/organization/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/calls/: data.rs  mod.rs
common/src/configuration/: mod.rs  traits.rs
common/src/configuration/apps/: mod.rs  neo4j.rs
common/src/configuration/primitives/: mod.rs  password.rs  path.rs  uri.rs
common/src/errors/: allwhat.rs  mod.rs
common/src/grapht/: mod.rs
common/src/model/: mod.rs
common/src/model/organization/: mod.rs
common/src/tools/: mod.rs
docs/: user_docs
docs/Submission Wrangler/: Roadmap.md
docs/Submission Wrangler/Installation/: Installation.md  Windows Deployment.md
importer/: Cargo.toml
importer/src/: main.rs
scripts/docker/: dev.Dockerfile  dev.docker-compose.yml
server/: Cargo.toml
server/src/: lib.rs
server/src/services/: mod.rs
server/src/services/docker/: mod.rs
server/src/services/graph_db/: mod.rs  neo4j.rs
server/src/workspace/: mod.rs
server/tests/: happy_path.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: graph_db.rs  main.rs
