[package]
edition = "2021"
name = "fhl-client"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# DTOs and common modeling for the wrangler
wrangler-common = {path="../common"}


yew = {version = "0.21", features = ["csr"]}

js-sys = "0.3.69"

wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

web-sys = "0.3.69"

tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = {version="0.3.18", features=["fmt", "time"]}
tracing-web = "0.1.3"
