[package]
edition = "2021"
name = "wrangler-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# String Guid generaters
uuid = {version = "1.7.0", features = ["v4", "v5", "serde", "js"]}

# raw http tools. 1.0.0 is not compatible with other items
http = "1.1.0"

# A bare bones requirement for tokio to capture the error messages
# tokio = "1.34.0"

# Graph database driver for Neo4j
# neo4rs = "0.6.2"
