[package]
name = "wrangler-importer"
version = "0.1.0"
description = "Read CSV files and load them into the database"
edition = "2021"
license = "MIT"
repository = "https://github.com/The-Process-Foundry/SubmissionWrangler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


# Local Code
# wrangler-common = {path = "../common"}

# Read the user data from FHL
csv = "1.3.0"

# Global IDs
uuid = {version = "1.6.1", features = ["v4", "v5", "serde", "js"]}

# Service: Database
neo4rs = {version = "0.7.1"}

# Async code?
futures = { version = "0.3.29" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-rustls = "0.25.0"

# Parse JSON
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"