[package]
name = "wrangler-server"
version = "0.1.0"
description = "Service manager with multi-user API with full access to the local machine "
edition = "2021"
license = "MIT"
repository = "https://github.com/The-Process-Foundry/SubmissionWrangler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


# Local Code
wrangler-common = {path = "../common"}

# Global IDs
uuid = {version = "1.4.1", features = ["v4", "v5", "serde", "js"]}

# Service: Database
neo4rs = {version = "0.6.2"}

# Async code?
futures = { version = "0.3.28" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"