[package]
authors = ["you"]
description = "Pathology Submission Manager"
edition = "2021"
license = ""
name = "fhl-submission-system"
repository = ""
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5.1", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.6.1", features = [] }

# Logging/instrumentation
tracing-subscriber = "0.3.17"

# _____________________   SERVER IMPORTS   ______________________________
# Global IDs
uuid = {version = "1.7.0", features = ["v4", "v5", "serde", "js"] }

# Service: Database
neo4rs = {version = "0.6.2"}

# Async code?
futures = { version = "0.3.30" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"

tracing = "0.1.40"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
